--- a/ProfileMatch.Components/User/UserClosedQuestionsTable.razor
+++ b/ProfileMatch.Components/User/UserClosedQuestionsTable.razor
@@ -6,7 +6,7 @@ else
 {
     <MudGrid Spacing="0" Class="d-flex justify-space-between">
         <MudItem xs="12" md="5">
-            <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
+            <MudText Typo="Typo.h6">@L["Closed Questions"]</MudText>
         </MudItem>
         <MudItem xs="12" md="5">
             <MudTextField Class="d-flex justify-end mt-0"
@@ -20,32 +20,43 @@ else
         </MudItem>
     </MudGrid>
 
-
-    <MudTable Items="@QuestionUserLevelVMs()" T="QuestionUserLevelVM" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="@FilterFunc">
-        <ColGroup>
-            <col />
-            <col style="width: 60%;" />
-            <col />
-            <col />
-        </ColGroup>
-        <HeaderContent>
-            <MudTh>@L["Name"]</MudTh>
-            <MudTh>@L["Description"]</MudTh>
-            <MudTh>@L["Answer"]</MudTh>
-            <MudTh>@L["Actions"]</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd DataLabel=@L["Name"]>@context.CategoryName</MudTd>
-            <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
-            <MudTd DataLabel=@L["Level"]>@context.Level</MudTd>
-            <MudTd DataLabel=@L["Edit"]>
-                <MudButton Size="Size.Small" Variant="Variant.Outlined" Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" OnClick="@(()=>UserAnswerDialog(context))">@L["Edit Answer"]</MudButton>
-            </MudTd>
-        </RowTemplate>
-        <PagerContent>
-            <MudTablePager RowsPerPageString=@L["Rows per page"] />
+    <MudDataGrid Items="@QuestionUserLevelVMs()" T="QuestionUserLevelVM" Dense="true" Hover="true" Bordered="false" Striped="false" QuickFilter="@FilterFunc">
+        <Columns>
+            <Column T="QuestionUserLevelVM" Title=@L["Name"]>
+                <CellTemplate>
+                    @if (ShareResource.IsEn())
+                {
+                    @context.CategoryName
+                }else{
+                    @context.CategoryNamePl
+                }
+                </CellTemplate>
+            </Column>   
+            <Column T="QuestionUserLevelVM" Title=@L["Description"]>
+                <CellTemplate>
+                    @if (ShareResource.IsEn())
+                {
+                    @context.Description
+                }else{
+                    @context.DescriptionPl
+                }
+                </CellTemplate>
+            </Column>   
+            <Column T="QuestionUserLevelVM" Title=@L["Answer"]>
+                <CellTemplate>
+                    @context.Level
+                </CellTemplate>
+            </Column>   
+            <Column T="QuestionUserLevelVM" Title=@L["Actions"]>
+                <CellTemplate>
+                    <MudButton Size="Size.Small" Variant="Variant.Outlined" Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" OnClick="@(()=>UserAnswerDialog(context))">@L["Edit Answer"]</MudButton>
+                </CellTemplate>
+            </Column>
+        </Columns>
+         <PagerContent>
+            <MudDataGridPager T="QuestionUserLevelVM" RowsPerPageString=@L["Rows per page"] />
         </PagerContent>
-    </MudTable>
+    </MudDataGrid>
 }
 <style>
     .mud-tabs-panels {
