--- a/ProfileMatch.Components/User/UserClosedQuestionsTable.razor
+++ b/ProfileMatch.Components/User/UserClosedQuestionsTable.razor
@@ -5,11 +5,24 @@
 else
 {
     <MudGrid Spacing="0" Class="d-flex justify-space-between">
-        <MudItem xs="12" md="5">
-            <MudText Typo="Typo.h6">@L["Closed Questions"]</MudText>
+    <MudItem xs="12" md="12">
+    <MudText Typo="Typo.h6">@L["Closed Questions"]</MudText>
+    </MudItem>        
+         <MudItem xs="12" md="5">
+            <MudSelect T="string" Label=@L["Select Category"] MultiSelection="true" OffsetY="true" @bind-SelectedValues="Cats">
+                @foreach (var cat in categories)
+                {
+                    if (ShareResource.IsEn())
+                    {
+                    <MudSelectItem T="string" Value="@cat.Name" />
+                    }else{
+                        <MudSelectItem T="string" Value="@cat.NamePl" />
+                    }
+                }
+            </MudSelect>
         </MudItem>
         <MudItem xs="12" md="5">
-            <MudTextField Class="d-flex justify-end mt-0"
+            <MudTextField Class="d-flex justify-end"
                       @bind-Value="searchString"
                       Placeholder=@L["Search"]
                       Adornment="Adornment.Start"
@@ -19,8 +32,7 @@ else
             </MudTextField>
         </MudItem>
     </MudGrid>
-
-    <MudDataGrid Items="@QuestionUserLevelVMs()" T="QuestionUserLevelVM" Dense="true" Hover="true" Bordered="false" Striped="false" QuickFilter="@FilterFunc">
+    <MudDataGrid Items="@QuestionUserLevelVMs()" T="QuestionUserLevelVM" Dense="true" Hover="true" Bordered="false" Striped="false" QuickFilter="@QuickFilter">
         <Columns>
             <Column T="QuestionUserLevelVM" Title=@L["Name"]>
                 <CellTemplate>
