--- a/ProfileMatch.Components/User/UserCard.razor
+++ b/ProfileMatch.Components/User/UserCard.razor
@@ -1,4 +1,4 @@
-﻿    <AuthorizeView>
+﻿<AuthorizeView>
     <Authorized>
         <MudCard Elevation="0" Square="true" Class="@Class" Style="@Style">
             <MudCardHeader>
@@ -7,7 +7,16 @@
                 </CardHeaderAvatar>
                 <CardHeaderContent>
                     <MudText Typo="Typo.body2">@CurrentUser?.FullName</MudText>
-                    <MudText Typo="Typo.caption">@CurrentUser?.JobTitle</MudText>
+                    @if (ShareResource.IsEn())
+                    {
+                        <MudText Typo="Typo.caption">@CurrentUser?.JobTitle</MudText>
+                    }
+                    else
+                    {
+                        <MudText Typo="Typo.caption">@CurrentUser?.JobTitlePl</MudText>
+                    }
+
+
                 </CardHeaderContent>
             </MudCardHeader>
         </MudCard>
